change path to data

--- a/declipper_notebook.ipynb
+++ b/declipper_notebook.ipynb
@@ -154,7 +154,7 @@
         }
       ],
       "source": [
-        "img = cv2.imread('/content/barbara.jpg')\n",
+        "img = cv2.imread('./data/barbara.jpg')\n",
         "x = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
         "x = x.astype('float32')/255\n",
         "\n",
@@ -945,7 +945,7 @@
         }
       ],
       "source": [
-        "fs, music = wavfile.read('/content/music.wav')\n",
+        "fs, music = wavfile.read('./data/music.wav')\n",
         "music = music.astype('float64')/2**15\n",
         "\n",
         "Audio(music, rate = fs)"
@@ -983,7 +983,7 @@
         }
       ],
       "source": [
-        "fs0, speech = wavfile.read('/content/speech.wav')\n",
+        "fs0, speech = wavfile.read('./data/speech.wav')\n",
         "speech = speech.astype('float64')/2**15\n",
         "\n",
         "Audio(speech, rate = fs0)"
