add commands to install lftatpy

--- a/declipper_notebook.ipynb
+++ b/declipper_notebook.ipynb
@@ -763,19 +763,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "5cMylf63gLBR"
-      },
-      "source": [
-        "### Team Members\n",
-        "    - Hugo Malard\n",
-        "    - Imad BOUHOU\n",
-        "    \n",
-        "***"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "PYaOGmxhfg79"
       },
       "source": [
@@ -790,9 +777,9 @@
       },
       "outputs": [],
       "source": [
-        "#!apt install libfftw3-dev\n",
-        "#!apt install liblapack-dev\n",
-        "#!pip install ltfatpy"
+        "!apt install libfftw3-dev\n",
+        "!apt install liblapack-dev\n",
+        "!pip install ltfatpy"
       ]
     },
     {
