add comments at the conclusion

--- a/declipper_notebook.ipynb
+++ b/declipper_notebook.ipynb
@@ -1835,12 +1835,12 @@
       },
       "source": [
         "# Conclusion:\n",
-        "In this notebook, we managed to implement the algorithm presented in the paper, and we made some experiments to reproduce the same results as the paper, and also to confirm some conclusions presented in the paper. \\\\\n",
-        "PEW operator yields better results in almost all the experiments, except for the speech signal where the hard-thresholding outperformed the PEW operator. \\\\\n",
-        "When the level of clipping grows, the declipping algorithm manages to reconstruct the signal as expected both for the music and speech cases. \\\\\n",
-        "At the last experiment, we tried to see how if the size of the window with the PEW operator will improve the reconstruction, and it turns out that smaller windows which tend to be faster to compute with a convolution and yield better results. \\\\\n",
-        "The authors of the paper suggested to continue future works on the theoretical sides of relation between PEW operator and the ISTA algorithms. \\\\\n",
-        "The soft-thresholding operator will be found by definition (L1-norm for the constraint with $\\lambda$) if we tried to solve the minimization problem by the ADMM (Douglas-Rachford algorithm) or the FISTA to compute the steps of the algorithm, but the authors suggested to replace it with PEW for example, which raises a question of what should be the minimization problem so that when we try to solve it using the ADMM or FISTA we get by definition the PEW as a thresholding operator."
+        "In this notebook, we managed to implement the algorithm presented in the paper, and we made some experiments to reproduce the same results as in the paper, and also to confirm some conclusions presented in the paper. \n",
+        "PEW operator yields better results in almost all the experiments, except for the speech signal where the hard-thresholding outperformed the PEW operator.\n",
+        "When the level of clipping grows, the declipping algorithm manages to reconstruct the signal as expected both for the music and speech cases.\n",
+        "At the last experiment, we tried to see if the size of the window with the PEW operator will improve the reconstruction, and it turns out that smaller windows which tend to be faster to compute with a convolution and yield better results.\n",
+        "The authors of the paper suggested to continue future works on the theoretical sides of the relation between PEW operator and the ISTA algorithms.\n",
+        "The soft-thresholding operator will be found by definition (L1-norm for the constraint with $\\lambda$) if we tried to solve the minimization problem by the ADMM (Douglas-Rachford algorithm) or the FISTA to compute the steps of the algorithm, but the authors suggested to replace it with PEW for example, which raises a question of what should be the minimization problem, so that when we try to solve it using the ADMM or FISTA we get by definition the PEW as a thresholding operator."
       ]
     },
     {
